[package]
name = "pencil"
version = "0.1.0"
authors = ["YohananDiamond <mitonanan12@gmail.com>"]
edition = "2018"

[dependencies]
penrose = { git = "https://github.com/sminez/penrose", branch = "develop" }
penrose_ui = { git = "https://github.com/sminez/penrose", branch = "develop" }
simplelog = "0.8.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }

[[bin]]
name = "pencil"
path = "src/main.rs"
